[package]
name = "ie"
version = "0.1.1"
edition = "2024"
license = "MIT"
authors = ["feraxhp <feraxhp+gh@gmail.com>"]
description = "A inline editor TUI to fast edit a file"
homepage = "https://github.com/feraxhp/ie"


[dependencies]
anyhow = "1.0.102"
crossterm = "0.29.0"
ratatui = "0.30.0"
ratatui-code-editor = "0.0.3"

[[bin]]
name = "grp"
path = "src/main.rs"
